--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Youngduck</string>
+    <string name="app_name">팝콘메이트</string>
     <string name="kakao_app_key">@string/APP_KEY_WITH_KAKAO</string>
 </resources>
